# finex-lending-bot

./: Cargo.toml  config.example.yaml  config.yaml
.devcontainer/: devcontainer.json
src/: main.rs
src/strategies/: basic_strategy.rs  mod.rs  simple_strategy.rs
