[package]
name = "finex-lending-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfinex-api = { git = "https://github.com/xenoliss/bitfinex-api" }

async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
